bad/bin_op_or_class_class.example_compiler_output
ERROR
[1mbad/bin_op_or_class_class.lat:5:8: [1;31merror: [0;1moperator || is defined only for `boolean` values, not `Y` and `Y`[m
	new Y || new Y;
	      [1;32m^[m
